Chatter edit component

--- a/ChatterBox-SPA/src/app/chatters/chatter-detail/chatter-detail.component.html
+++ b/ChatterBox-SPA/src/app/chatters/chatter-detail/chatter-detail.component.html
@@ -48,7 +48,7 @@
           </tab>
           <tab heading="Photos">
 
-            <!-- <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery> -->
+            <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
           </tab>
           <tab heading="Messages">
             <h4>Messages will go here!!</h4>
