Photo upload and delete functionality

--- a/ChatterBox-SPA/src/app/nav/nav.component.html
+++ b/ChatterBox-SPA/src/app/nav/nav.component.html
@@ -18,6 +18,9 @@
     </ul>
 
     <div class="dropdown" *ngIf="loggedIn()" dropdown>
+        <span class="mr-2">
+            <img src="{{photoUrl}}" alt="">
+          </span>
       <a class="dropdown-toggle text-light" dropdownToggle (click)="false">
         Welcome {{authService.decodedToken?.unique_name | titlecase}}
       </a>
