--- a/ChatterBox-SPA/src/app/chatters/photo-editor/photo-editor.component.html
+++ b/ChatterBox-SPA/src/app/chatters/photo-editor/photo-editor.component.html
@@ -17,21 +17,21 @@
 
     <h3>Add Photos</h3>
 
-    <!-- <div ng2FileDrop [ngClass]="{'nv-file-over': hasBaseDropZoneOver}" (fileOver)="fileOverBase($event)"
+    <div ng2FileDrop [ngClass]="{'nv-file-over': hasBaseDropZoneOver}" (fileOver)="fileOverBase($event)"
       [uploader]="uploader" class="card bg-faded p-3 text-center mb-3 my-drop-zone">
       <i class="fa fa-upload fa-3x"></i>
       Drop photos here
-    </div> -->
+    </div>
   
 
     Multiple
-    <!-- <input type="file" ng2FileSelect [uploader]="uploader" multiple /><br /> -->
+    <input type="file" ng2FileSelect [uploader]="uploader" multiple /><br />
 
     Single
-    <!-- <input type="file" ng2FileSelect [uploader]="uploader" /> -->
+    <input type="file" ng2FileSelect [uploader]="uploader" />
   </div>
 
-  <!-- <div class="col-md-9" style="margin-bottom: 40px" *ngIf="uploader?.queue?.length">
+  <div class="col-md-9" style="margin-bottom: 40px" *ngIf="uploader?.queue?.length">
 
     <h3>Upload queue</h3>
     <p>Queue length: {{ uploader?.queue?.length }}</p>
@@ -73,6 +73,6 @@
       </button>
     </div>
 
-  </div> -->
+  </div>
 
 </div>
