--- a/ChatterBox-SPA/src/app/chatters/chatter-card/chatter-card.component.html
+++ b/ChatterBox-SPA/src/app/chatters/chatter-card/chatter-card.component.html
@@ -1,6 +1,6 @@
 <div class="card mb-4">
   <div class="card-img-wrapper">
-    <img class="card-img-top" alt="{{user.knownAs}}" src="{{user.photoUrl}}">
+    <img class="card-img-top" alt="{{user.knownAs}}" src="{{user.photoUrl || '../../../assets/user.png'}}">
     <ul class="list-inline member-icons animate text-center">
       <li class="list-inline-item"><button [routerLink]="['/chatters/',user.id]" class="btn btn-primary"><i
             class="fa fa-user"></i></button></li>
