--- a/ChatterBox-SPA/src/app/nav/nav.component.html
+++ b/ChatterBox-SPA/src/app/nav/nav.component.html
@@ -19,7 +19,7 @@
 
     <div class="dropdown" *ngIf="loggedIn()" dropdown>
         <span class="mr-2">
-            <img src="{{photoUrl}}" alt="">
+            <img src="{{photoUrl || '../../assets/user.png'}}" alt="">
           </span>
       <a class="dropdown-toggle text-light" dropdownToggle (click)="false">
         Welcome {{authService.decodedToken?.unique_name | titlecase}}
