Action filters Added TimeAgo pipe

--- a/ChatterBox-SPA/src/app/chatters/chatter-edit/chatter-edit.component.html
+++ b/ChatterBox-SPA/src/app/chatters/chatter-edit/chatter-edit.component.html
@@ -25,11 +25,11 @@
           </div>
           <div>
             <strong>Last Active:</strong>
-            <p>{{user.lastActive}}</p>
+            <p>{{user.lastActive | timeAgo}}</p>
           </div>
           <div>
             <strong>Member since:</strong>
-            <p>{{user.created}}</p>
+            <p>{{user.created | date: 'mediumDate'}}</p>
           </div>
         </div>
         <div class="card-footer">
@@ -68,7 +68,8 @@
 
           </tab>
           <tab heading="Edit Photos">
-            <app-photo-editor [photos]="user.photos" (getMemberPhotoChange)="updateMainPhoto($event)"></app-photo-editor>
+            <app-photo-editor [photos]="user.photos" (getMemberPhotoChange)="updateMainPhoto($event)">
+            </app-photo-editor>
           </tab>
 
         </tabset>
